# PortBridge

./: .gitignore  .periphery.yml  .swiftformat  .swiftlint.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install-release.sh  install.sh
.githooks/: pre-commit  pre-push
.github/: release.yml
.github/workflows/: ci.yml  lint.yml  pr-autolabel.yml  release.yml  rust.yml
PortBridge/: AppSingleInstance.swift  ContentView.swift  Info.plist  MenuBarController.swift  PortBridgeApp.swift  Strings.swift
PortBridge.xcodeproj/: project.pbxproj
PortBridge/Models/: FavoriteKey.swift  Forwarding.swift  PortBridgeError.swift  RemotePort.swift  SSHHost.swift  Server.swift
PortBridge/SSH/: CommandRunner.swift  ProcessCommandRunner.swift  SSHConfigParser.swift
PortBridge/Scanning/: PortScanner.swift  ScanOutputParser.swift
PortBridge/Storage/: AppPreferences.swift  FavoriteStore.swift  ServerStore.swift
PortBridge/Tunneling/: TunnelManager.swift
PortBridge/Updates/: ReleaseFetcher.swift  ReleaseInfo.swift  SemanticVersion.swift  UpdateChecker.swift  UpdateNotifier.swift  UpdatePresenter.swift
PortBridge/ViewModels/: AppViewModel.swift  ServerSectionViewModel.swift
PortBridge/Views/: ActiveSectionHeader.swift  AddServerSheet.swift  AllPortsSectionHeader.swift  AllServersSectionHeader.swift  DesignTokens.swift  ForwardingRowView.swift  HostPickerView.swift  MenuBarContent.swift  MenuBarIconView.swift  PortListView.swift  ServerListView.swift  ServerSectionView.swift
PortBridgeTests/: .swiftlint.yml  AppInstanceLockTests.swift  AppPreferencesTests.swift  AppViewModelActivatedAtTests.swift  AppViewModelActiveSectionTests.swift  AppViewModelDisplayNameLookupTests.swift  AppViewModelFavoritesTests.swift  AppViewModelServerUpdateTests.swift  AppViewModelStartForwardingTests.swift  CollapseAllTests.swift  FavoriteStoreTests.swift  ForwardingRowViewTests.swift  ForwardingTests.swift  L10nTests.swift  MockCommandRunner.swift  MockTunnelManager.swift  MockUpdateNotifier.swift  PortBridgeErrorTests.swift  PortBridgeTests.swift  PortScannerTests.swift  ProcessCommandRunnerTests.swift  ReleaseInfoDecodingTests.swift  RemotePortTests.swift  SSHConfigParserTests.swift  SSHHostTests.swift  ScanOutputParserTests.swift  SemanticVersionTests.swift  ServerSectionViewModelTests.swift  ServerStoreTests.swift  ServerTests.swift  UpdateCheckerTests.swift
PortBridgeTests/Fixtures/: config_basic.txt  config_wildcard.txt  lsof_no_process.txt  lsof_typical.txt  ss_ipv4_only.txt  ss_ipv6_mixed.txt  ss_no_header.txt
PortBridgeUITests/: .swiftlint.yml  LaunchSmokeTests.swift  PortBridgeUITests.swift  PortBridgeUITestsLaunchTests.swift
Scripts/: inject-version.sh
apps/macos/: install.sh
crates/portbridge-cli/: Cargo.toml
crates/portbridge-cli/src/: main.rs  store.rs  tunnels.rs
crates/portbridge-core/: Cargo.toml
crates/portbridge-ffi/: .gitignore  Cargo.toml  README.md
crates/portbridge-ffi/src/: lib.rs
crates/portbridge-ffi/swift/: main.swift
crates/portbridge-tauri/: .prettierignore  TESTING.md  index.html  package-lock.json  package.json
crates/portbridge-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/portbridge-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  native_policy.rs  scan_runner.rs  store.rs  tunnel_runtime.rs  update_check.rs
docs/: PRIVACY.md  uiux-review-50-personas.md
scripts/: check-deadcode.sh  setup-hooks.sh
(+135 files in other folders)
