[package]
name = "portbridge-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "portbridge"
path = "src/main.rs"

[dependencies]
portbridge-core = { path = "../portbridge-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
