[package]
name = "portbridge-ffi"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "portbridge_ffi"

[dependencies]
portbridge-core = { path = "../portbridge-core" }
uniffi = { version = "0.28", features = ["cli"] }


# uniffi-bindgen이 PATH에 없으므로 임베드된 bin으로 바인딩을 생성한다:
#   cargo run --bin uniffi-bindgen -- generate --library <dylib> --language swift --out-dir generated
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
